	Older replays have deprecation_number <= 1, and we don't waste the RNG cycle when playing them back.
DONE: When backing offscreen (to the left) from the first guard on level 7 (among others), simulate the glitch from DOS PoP, which causes the prince to fall through the floor.
	Details: See https://github.com/NagyD/SDLPoP/issues/229
FIXED: On Windows, use Unicode/UTF-8 for stat().
	So SDLPoP can load levels from mod folders when a replay file restarts the level or advances to the next level.
DONE: Added a more visible error message when a mod referenced by a replay file cannot be found in the mods folder.
DONE: Allow guard skill customizations in SDLPoP.ini.
DONE: Made FIX_DOORTOP_DISABLING_GUARD configurable.


(no release date yet)
=================
(upcoming version)

DONE: Adjust SDL2 headers search path in CMake or macOS builds
FIXED: Don't hardcode level 13 for the loose floor events.
DONE: Mention the tricks page in the INI, since tricks are mentioned there.
FIXED: If a sprite's xpos is negative and divisible by 8, it appeared shifted 8 pixels to the left.
	Details: See FIX_SPRITE_XPOS in config.h .
FIXED: Report any missing data file as soon as we try to open it, instead of only when we try to load data from it.
FIXED: If the place of a special event was changed, show it at its new place on level maps.
	This works only with events whose place can be customized.
DONE: Show guards' HP and skills on the maps.
FIXED: Don't complain about data files missing from the mod folder.
DONE: Added options to use the original music and/or graphics for custom levelsets.
DONE: Added gamecontroller hotplug support. SDLPoP now detects controllers plugged in while the game is already running.
	Details: https://github.com/NagyD/SDLPoP/pull/256
FIXED: Fixed black rectangle appearing when the shadow falls into the wall.
	Details: See FIX_BLACK_RECT in config.h and https://github.com/NagyD/SDLPoP/issues/254