@@ -667,3 +667,5 @@ DONE: Added gamecontroller hotplug support. SDLPoP now detects controllers plugg
 	Details: https://github.com/NagyD/SDLPoP/pull/256
 FIXED: Fixed black rectangle appearing when the shadow falls into the wall.
 	Details: See FIX_BLACK_RECT in config.h and https://github.com/NagyD/SDLPoP/issues/254
+DONE: Briefly show a dark screen when changing rooms, like in the original game.
+	See USE_DARK_TRANSITION in config.h .
